# Chess-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
docs/: api_reference.md  pipeline_tree.md
geometry/: geometry_data.cpp
geometry/include/: polygon.h
include/: bounding_box.h  framebuffer.h  gui.h  light.h  light_helper.h  mesh.h  model.h  renderer.h  scene.h  shader.h  shader_compute.h  thread_pool.h  transform.h
include/chess2D/: board.h  board_renderer.h  square.h
include/chess_engine/: Board.h  bitboard.h  board_rep.h  board_state.h  fen_util.h  hash_keys.h  main.cpp  move.h  move_generator.h  piece_list.h  pieces.h
include/menus/: CMakeLists.txt  mainMenu.h  manager.h  playMenu.h  settingsMenu.h  startGameMenu.h  vsCompMenu.h  vsPlayerMenu.h
include/rendering_engine/: camera.h  camera_helper.h  gui.h  light.h  mesh.h  mouse_selector.h  renderer.h  scene.h  shader.h  shader_compute.h  texture_cache.h  timer.h
include/rendering_engine/gui/: debug_ui_manager.h
shaders/: cube.frag  cube.vert  cube_instanced.vert  helper.frag  helper.vert  infinite_grid.frag  infinite_grid.vert  outline.frag  sprite2d.frag  sprite2d.vert
src/: CMakeLists.txt  bounding_box.cpp  framebuffer.cpp  gui.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp
src/chess2D/: board_renderer.cpp
src/chess_engine/: board_state.cpp  move_generator.cpp  precomp_move_data.cpp
src/menus/: manager.cpp  vsCompMenu.cpp
src/rendering_engine/: camera.cpp  framebuffer.cpp  gui.cpp  main.cpp  mesh.cpp  mouse_selector.cpp  renderer.cpp  scene.cpp  texture_cache.cpp
src/rendering_engine/gui/: debug_ui_manager.cpp
tests/: USAGE_EXAMPLES.cpp  engine_probe.py  sprite_render_test.cpp
ui/: CMakeLists.txt
ui/include/: input.h  manager.h
ui/include/builder/: builder.h
ui/include/common/: ui.h  uiCommon.h  uiConfig.h  uiElement.h  uiPanel.h
ui/include/elements/: button.h  checkbox.h  dialog.h  dropdown.h  label.h  promotion_dialog.h  slider.h  text_input.h
ui/src/: input.cpp  manager.cpp
ui/src/builder/: builder.cpp
ui/src/elements/: button.cpp  checkbox.cpp  dialog.cpp  dropdown.cpp  label.cpp  promotion_dialog.cpp  slider.cpp  text_input.cpp
utils/include/: thread_pool.h
